@@ -33,8 +33,12 @@
                       </div>
 
                       <div>
-                          <strong>{{ notification.idea.title }}</strong>
-                              <img src="{{ notification.idea.image.url }}" width="180px" height="100px">
+                          <strong><small>
+                              <a href="{% url 'ideas:detail' notification.idea.id %}" style="text-decoration: none">
+                                  {{ notification.idea.title }}
+                              </a>
+                          </small></strong>
+                          <img src="{{ notification.idea.image.url }}" width="150px" height="80px">
                       </div>
 
             {% endif %}
@@ -61,8 +65,12 @@
                       </div>
 
                       <div>
-                          <strong>{{ notification.idea.title }}</strong>
-                              <img src="{{ notification.idea.image.url }}" width="180px" height="100px">
+                          <strong><small>
+                              <a href="{% url 'ideas:detail' notification.idea.id %}" style="text-decoration: none">
+                                  {{ notification.idea.title }}
+                              </a>
+                          </small></strong>
+                          <img src="{{ notification.idea.image.url }}" width="150px" height="80px">
                       </div>
             {% endif %}
 
@@ -79,6 +87,32 @@
                             <img class="rounded-circle shadow-1-strong me-2" src="{{ notification.sender.avatar.url }}" alt="avatar" width="40px" height="40px">
                             <strong>{{ notification.sender.first_name }} {{ notification.sender.last_name }}</strong>
                             <small>@{{ notification.sender.username }}</small> Followed to You
+                            <br>
+                            <strong><small>{{ notification.date }}</small></strong>
+                        </div>
+                      </div>
+            {% endif %}
+
+
+            <!-- FOR COMMENTS --->
+            {% if notification.notification_type == 3 and notification.sender.id != request.user.id %}
+
+                    <hr>
+                      <div>
+                        <div>
+                            <a href="{% url 'notifications:delete-notification' id=notification.id %}" class="delete">
+                                <img src="/media/social_media/notification-delete.png" alt="delete" style="height: 30px; width: 30px; float: right;">
+                            </a>
+                            <br>
+                            <img class="rounded-circle shadow-1-strong me-2" src="{{ notification.sender.avatar.url }}" alt="avatar" width="40px" height="40px">
+                            <strong>{{ notification.sender.first_name }} {{ notification.sender.last_name }}</strong>
+                            <small>@{{ notification.sender.username }}</small> Wrote the comment
+                            <br>
+                            <blockquote>{{ notification.text_preview }}</blockquote>
+                            <strong><small>under Idea:
+                                <a href="{% url 'ideas:detail' notification.idea.id %}" style="text-decoration: none">
+                                    {{ notification.idea.title }}
+                                </a></small></strong>
                             <br>
                             <strong><small>{{ notification.date }}</small></strong>
                         </div>
