@@ -101,9 +101,11 @@ User
 7 Июля:
 - Система уведомлений для Follow
 
+8 Июля:
+- Система уведомлений для Comment
+
 
 СДЕЛАТЬ ПОСЛЕ:
-- Уведомления для Comment
 - Фильтры для Ideas
 - Избранные Idea
 - Доработать меню пользователя
@@ -141,3 +143,4 @@ Create your own Idea if you have any
 
 ВОПРОСЫ:
 - Добавление нескольких изображений в одну модель (через другую модель?)
+- Не работает check_comment_like в представлении comment
